<resources>
    <string name="app_name">FYP</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">closed</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission">Permission</string>
    <string name="save">Save photo and videos</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="learnmore">Learn more</string>
    <string name="sendfeedback">Send feedback</string>
    <string name="downloads">Downloads</string>
    <string name="setting">Settings</string>
</resources>