<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bottomnav_color"
    tools:context=".fragment.SettingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_fallbackRes="@drawable/chat"
            app:lottie_url="https://assets8.lottiefiles.com/packages/lf20_gjvlmbzr.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>


        <TextView
            android:layout_width="match_parent"
            android:text="@string/permission"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="13dp"
            android:background="@color/black_light"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_height="0dp">
            <TextView
                android:layout_width="0dp"
                android:text="@string/save"
                android:layout_weight="1"
                android:textSize="19dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:layout_height="wrap_content">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content">
            </com.google.android.material.switchmaterial.SwitchMaterial>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/language"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="13dp"
            android:background="@color/black_light"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_height="0dp">
            <TextView
                android:layout_width="0dp"
                android:text="@string/english"
                android:layout_weight="1"
                android:textSize="19dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:layout_height="wrap_content">
            </TextView>

            <CheckBox
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:background="@null"
                android:layout_height="wrap_content">
            </CheckBox>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textSize="18dp"
            android:textStyle="bold"
            android:paddingLeft="13dp"
            android:background="@color/black_light"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:layout_height="wrap_content">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_height="0dp">
            <TextView
                android:layout_width="0dp"
                android:text="@string/learnmore"
                android:layout_weight="1"
                android:textSize="19dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:layout_height="wrap_content">
            </TextView>

            <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_go"
                android:layout_height="wrap_content">
            </ImageButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:id="@+id/logout_btn"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_medium"
                android:paddingTop="10dp"
                android:text="@string/signout"
                android:textColor="@color/white"
                android:textSize="19dp"></TextView>

            <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_signout"
                android:layout_height="wrap_content">
            </ImageButton>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>